# dotfiles

./: .dotfilesignore  DEVELOPMENT.md  envrc  envrc.functions  envrc.main  gitconfig  pyproject.toml  vimrc  vimrc.cscope  vimrc.eval
claude/: CLAUDE.md  DEVELOPMENT_SHARED.md  DEVELOPMENT_SHARED_AGENT.md  SHARED.md
codex/: AGENTS.md  DEVELOPMENT_SHARED_AGENT.md
config/crony/: config.toml
files/: envrc.aliases  envrc.functions  envrc.main  inputrc  markdownlint.json  tmux.conf  vimrc
files/claude/: DEVELOPMENT_SHARED.md
files/codex/: DEVELOPMENT_SHARED.md  DEVELOPMENT_SHARED_AGENT.md  config.toml
files/local/libexec/dpmr-calendar-scrape/: dpmr-calendar-scrape
files/local/share/agents/: SHARED.md
files/ssh/: config
local/libexec/gas-prices-breakdown/: gas-prices-breakdown
local/share/agents/: SHARED.md
