[project]
name = "dotfiles"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "epilatow-repo-shared",
    "pytest>=9.0.3",
]

[tool.uv.sources]
epilatow-repo-shared = { git = "https://github.com/epilatow/repo-shared", rev = "4725fec198d93b43186196ade2a7f729fd7bb4fc" }

[tool.pytest.ini_options]
testpaths = ["_repo_shared/tests"]
