[project]
name = "dotfiles"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "epilatow-repo-shared",
    "pytest>=9.0.3",
]

[tool.uv.sources]
epilatow-repo-shared = { git = "https://github.com/epilatow/repo-shared", rev = "debf0dd91bfb445159d565b6a737138c7b23a6d4" }

[tool.pytest.ini_options]
testpaths = ["_repo_shared/tests"]
