[project]
name = "dotfiles"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "epilatow-repo-shared",
    "pytest>=9.0.3",
]

[tool.uv.sources]
epilatow-repo-shared = { git = "https://github.com/epilatow/repo-shared", rev = "e21a12572e677c27a9d23c054e4d223452f5041f" }

[tool.pytest.ini_options]
testpaths = ["_repo_shared/tests"]
